--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.22",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "react-transitions-library": "^1.10.2",
     "styled-components": "^6.1.8",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
